# cryptomath

./: CMakeLists.txt  LICENSE  README.md
include/: encrypt.h  generateANF.h  generateSage.h  solveCNF.h
src/: CMakeLists.txt  encrypt.cpp  generateANF.cpp  generateSage.cpp  main.cpp  solveCNF.cpp
